--- a/update.css
+++ b/update.css
@@ -5,7 +5,7 @@
 
 .main {
     width: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%);
+    background: linear-gradient(to top, rgba(2, 59, 61, 0.5)50%, rgba(2, 59, 61, 0.5)50%);
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -24,7 +24,7 @@
 }
 
 .logo {
-    color: #ff7200;
+    color:  #07133a;
     font-size: 35px;
     font-family: Arial;
     padding-left: 20px;
@@ -41,8 +41,12 @@
 }
 
 h1 {
-    color: antiquewhite;
+    color: rgb(102, 59, 8);
+    padding-top:69px ;
+  
 }
+
+
 
 
 
@@ -82,4 +86,7 @@ form div.up {
     text-align: left;
     padding: 100px;
 
+}
+form{
+    margin-top: 100px;
 }
